# nanochat-rs-next

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPECS.md  input.txt  plan.md  plan_2025-02-13.md  plan_2026-02-12.md
.github/workflows/: ci.yml
docs/: plan.md  requirements.md  roadmap.md  tasks.md  upstream_analysis.md
notebooks/: colab_gpu_benchmark.ipynb
scripts/: benchmark_karpathy.py  colab_gpu_benchmark.sh  colab_url.py  nvidia_doctor.sh  profile_gpu.sh
src/: checkpoint.rs  cli.rs  config.rs  eval.rs  lib.rs  main.rs  training.rs
src/data/: mod.rs  tokenizer.rs
src/experiments/: mod.rs
src/scalar/: bigram.rs  minigpt.rs  mod.rs  optimizer.rs  value.rs
src/tensor/: mod.rs
