[package]
name = "nanochat-rs-next"
version = "0.1.0"
edition = "2024"
description = "Rust-first nanochat continuation for benchmark-driven training, eval, and inference experiments."

[features]
default = []
tch-backend = ["dep:tch"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
rand = "0.8.5"
tch = { version = "0.20.0", optional = true }
